# chk_win

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: LinkCommon.cmake  LinkGLAD.cmake  LinkGLFW.cmake
include/: chk_win.h
src/: chk_win.c
